SHOP-10: добавил min_price для купона, также сделал некоторые правки по проекту
